--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2036,4 +2036,7 @@ found in the list of installed applications.</string>
 <string name="eth_toggle_summary_off">Turn off Ethernet</string>
 <string name="proxy_setting">Proxy Setting</string>
 <string name="proxy_setting_summary">Configure Proxy</string>
+<string name="softkeyboard_enable">SoftKeyBoard Enable</string>
+<string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
+
 </resources>
