--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2671,4 +2671,7 @@ found in the list of installed applications.</string>
     from their cell phone carrier. The use of the string is similar to the string
     "system_update_settings_list_item_title" in this project. [CHAR LIMIT=25] -->
     <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
+
+    <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
+    <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
 </resources>
