--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2174,4 +2174,6 @@ found in the list of installed applications.</string>
     <!-- Proxy settings -->
     <string name="proxy_setting">Proxy settings</string>
     <string name="proxy_setting_summary">Configure a proxy to access Internet</string>
+    <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
+    <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
 </resources>
