--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2034,9 +2034,11 @@ found in the list of installed applications.</string>
 <string name="eth_conf_summary">Configure Ethernet Devices</string>
 <string name="eth_mask">Netmask</string>
 <string name="eth_toggle_summary_off">Turn off Ethernet</string>
-<string name="proxy_setting">Proxy Setting</string>
-<string name="proxy_setting_summary">Configure Proxy</string>
+<string name="proxy_setting">Proxy settings</string>
+<string name="proxy_setting_summary">Configure a proxy to access Internet</string>
 <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
 <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
+<string name="keyboard_layout_title">Keyboard layout setting</string>
+<string name="keyboard_layout_summary">Choose a keyboard layout</string>
 
 </resources>
