--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2674,4 +2674,6 @@ found in the list of installed applications.</string>
 
     <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
     <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
+    <string name="keyboard_layout_title">Keyboard layout setting</string>
+    <string name="keyboard_layout_summary">Choose a keyboard layout</string>
 </resources>
