Add keyboard layout setting
Change-Id: I8c1b7689c96c07676abf0653388940273e4aa935

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2531,4 +2531,6 @@ found in the list of installed applications.</string>
 
     <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
     <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
+    <string name="keyboard_layout_title">Keyboard layout setting</string>
+    <string name="keyboard_layout_summary">Choose a keyboard layout</string>
 </resources>
