--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -659,6 +659,8 @@
     <string name="lockpattern_settings_enable_title" msgid="6920616873671115281">"需要解锁图案"</string>
     <string name="lockpattern_settings_enable_summary" msgid="1165707416664252167">"必须绘制图案才能解锁屏幕"</string>
     <string name="lockpattern_settings_enable_visible_pattern_title" msgid="104851667540971729">"使用可见的图案"</string>
+    <string name="lockpattern_settings_disable_lock_pattern_title">不锁住屏幕</string>
+    <string name="lockpattern_settings_disable_lock_pattern_summary">闲置时不要锁住屏幕</string>
     <string name="lockpattern_settings_enable_tactile_feedback_title" msgid="972174133075372341">"使用触控反馈"</string>
     <string name="lockpattern_settings_choose_lock_pattern" msgid="1652352830005653447">"设置解锁图案"</string>
     <string name="lockpattern_settings_change_lock_pattern" msgid="1123908306116495545">"更改解锁图案"</string>
