--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -614,6 +614,12 @@
     <string name="assisted_gps" msgid="4649317129586736885">"使用輔助 GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"使用伺服器輔助 GPS (取消勾選即可降低網路使用量)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"使用伺服器輔助 GPS (取消勾選即可提升 GPS 效能)"</string>
+    <string name="advanced_settings">"進階設定"</string>
+    <string name="advanced_settings_title">"進階設定"</string>
+    <string name="remove_power_off_dialog_title">"快速關機"</string>
+    <string name="remove_power_off_dialog_summary">"不顯示關機選單，直接關機"</string>
+    <string name="disable_power_off_confirmation_title">"無關機確認"</string>
+    <string name="disable_power_off_confirmation_summary">"關機前不必再確認"</string>
     <string name="about_settings" msgid="1743378368185371685">"關於手機"</string>
     <string name="about_settings_summary" msgid="3302263393543848667">"檢視法律資訊、手機狀態、軟體版本"</string>
     <string name="legal_information" msgid="5769301644270604095">"法律資訊"</string>
