--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -619,7 +619,7 @@
     <string name="remove_power_off_dialog_title">"快速关机"</string>
     <string name="remove_power_off_dialog_summary">"直接关机，不显示菜单"</string>
     <string name="disable_power_off_confirmation_title">"无关机确认"</string>
-    <string name="disable_power_off_confirmation_summary">"关机前不必再确认"</string>
+    <string name="disable_power_off_confirmation_summary">"关机或重新开机前无需确认"</string>
     <string name="about_settings" msgid="1743378368185371685">"关于手机"</string>
     <string name="about_settings_summary" msgid="3302263393543848667">"查看法律信息、手机状态和软件版本"</string>
     <string name="legal_information" msgid="5769301644270604095">"法律信息"</string>
