--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2672,8 +2672,9 @@ found in the list of installed applications.</string>
     "system_update_settings_list_item_title" in this project. [CHAR LIMIT=25] -->
     <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
 
-    <string name="softkeyboard_enable">SoftKeyBoard Enable</string>
-    <string name="softkeyboard_enable_summary">Enable SoftKeyBoard</string>
+    <string name="disable_softkeyboard">Disable SoftKeyBoard</string>
+    <string name="softkeyboard_disabled">SoftKeyBoard disabled</string>
+    <string name="softkeyboard_enabled">SoftKeyBoard enabled</string>
     <string name="keyboard_layout_title">Keyboard layout setting</string>
     <string name="keyboard_layout_summary">Choose a keyboard layout</string>
 </resources>
